--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gugi|Lato:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-    <title>Document</title>
+    <title>Fun with drinks</title>
 </head>
 
 <body>
